--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     .container2 {
         width: 100%;
         padding: 200px 0 250px;
-        background-image: url('../images/Group\ 46.png');
+        background-image: url('images/Group 46.png');
         background-repeat: no-repeat;
         background-size: cover;
         display: flex;
@@ -569,7 +569,7 @@
 <body>
     <header>
         <div class="nav-logo">
-            <img src="../images/ESTA Logo.png" alt="est agadir logo">
+            <img src="images/ESTA Logo.png" alt="est agadir logo">
         </div>
         <div class="nav-btn">
             <button class="theme-btn"><i class="fa-solid fa-moon" style="color: #000000;"></i></button>
@@ -591,22 +591,22 @@
             <div class="cercle-design-1"></div>
             <div class="cercle-design-2"></div>
             <div class="cercle-design-3"></div>
-            <img src="../images/image1.png" alt="">
+            <img src="images/image1.png" alt="">
         </div>
     </section>
     <section class="container2">
         <div class="image-sectio-2">
             <div class="section-2-image image-1">
-                <img src="../images/man-by-whiteboard.jpg" alt="">
+                <img src="images/man-by-whiteboard.jpg" alt="">
             </div>
             <div class="section-2-image image-2">
-                <img src="../images/medium-shot-scientist-working-lab.jpg" alt="">
+                <img src="images/medium-shot-scientist-working-lab.jpg" alt="">
             </div>
             <div class="section-2-image image-3">
-                <img src="../images/man-electrical-technician-working-switchboard-with-fuses.jpg" alt="">
+                <img src="images/man-electrical-technician-working-switchboard-with-fuses.jpg" alt="">
             </div>
             <div class="section-2-image image-4">
-                <img src="../images/tmpic.jpg" alt="">
+                <img src="images/tmpic.jpg" alt="">
             </div>
         </div>
         <div class="text-section-2">
